pom java version

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
 	<artifactId>API_Framework</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<properties>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
+	</properties>
+
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -26,8 +31,10 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.10.1</version> <!-- Stable version -->
-					<!-- <configuration> <source>11</source> Java version <target>11</target> 
-						</configuration> -->
+					<configuration>
+						<source>21</source>
+						<target>21</target>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
